<resources>
    <string name="app_name">rk_app</string>
    <string name="settings">settings</string>
    <string name="refresh">refresh</string>
    <string name="default_crypto">BTC</string>
    <string name="txt_link">Read more</string>
    <string name="txt_link_link">https://crypto.info/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_min">Min</string>
    <string name="info_max">Max</string>
    <string name="info_open">Open</string>
    <string name="info_">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="time_header">Period</string>
    <string name="currency_header">Currency</string>

    <string name="time_days_title">Days</string>
    <string name="currency_crypto_title">Crypto</string>
    <string name="currency_currency_title">Money</string>
</resources>