<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="#FFE6F4"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/header"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAlignment="center"/>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="168dp"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/info_min" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/text_min"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/info_max"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/text_max"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/info_open"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/text_open"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/info_"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/text_close"/>
        </TableRow>


    </TableLayout>

</LinearLayout>